@@ -9,6 +9,7 @@ JEDIT VERSION HISTORY
 - To Upper Case, To Lower Case and Select Word actions from TextTools plugin
   moved into the core (TextTools was written by Mike Dillon)
 - New Select Line, Select Paragraph actions (mainly useful in plugins)
+- PostScript syntax highlighting for .ps files (Ralf Engels)
 
 + Enhancements
 
